--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -133,13 +133,13 @@
                         </a>
                     </li>
                     <li class="sidebar-item">
-                        <a href="/pages/register.html" class="sidebar-link">
+                        <a href="/app/pages/register.html" class="sidebar-link">
                             <i class="lni lni-user"></i>
                             <span>Create New User</span>
                         </a>
                     </li>
                     <li class="sidebar-item">
-                        <a href="/pages/login.html" class="sidebar-link">
+                        <a href="/app/pages/login.html" class="sidebar-link">
                             <i class="lni lni-user"></i>
                             <span>Login</span>
                         </a>
