--- a/FrontEnd/pages/register.html
+++ b/FrontEnd/pages/register.html
@@ -48,7 +48,7 @@
         Error al Registrarse.
       </div>
     </form>
-    <p class="text-center text-white">Go to login - <a href="/pages/login.html"><button type="button"
+    <p class="text-center text-white">Go to login - <a href="/app/pages/login.html"><button type="button"
         class="btn btn-success">Go</button></a></p>
   </main>
 </body>
