--- a/FrontEnd/user.html
+++ b/FrontEnd/user.html
@@ -66,13 +66,13 @@
             <aside id="sidebar" class="bg-dark" data-bs-theme="dark">
                 <ul class="sidebar-nav">
                     <li class="sidebar-item">
-                        <a href="/pages/register.html" class="sidebar-link">
+                        <a href="/app/pages/register.html" class="sidebar-link">
                             <i class="lni lni-user"></i>
                             <span>Create New User</span>
                         </a>
                     </li>
                     <li class="sidebar-item">
-                        <a href="/pages/login.html" class="sidebar-link">
+                        <a href="/app/pages/login.html" class="sidebar-link">
                             <i class="lni lni-user"></i>
                             <span>Login</span>
                         </a>
